Fixed responsiveness for page overflow

--- a/css/calc.css
+++ b/css/calc.css
@@ -9,7 +9,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.29), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
   padding-top: 3%;
   width: 85%;
-  height: 100vh;
+  height: 100%;
   margin: 15px auto;
   padding-bottom: 40px;
   background-color: #97ABB1;
