--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,19 @@
 .container-fluid {
-  height: auto;
+  height: 100vh;
   width: 100vw;
   background-color: #8A716A;
+  overflow-y: scroll;
 }
 
 .container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.29), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
   padding-top: 3%;
   width: 85%;
-  height: 100vh;
+  height: 100%;
   margin: 15px auto;
   padding-bottom: 40px;
   background-color: #97ABB1;
+  overflow-y: scroll;
 }
 
 @media (max-width:445px) {
